<resources>
    <string name="app_name">ui_prototype</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_id">\@placeholder</string>
    <string name="edit_label">Edit profile</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_enter_password_hint">Re-enter password</string>
    <string name="sign_up_title">Create your account.</string>
    <string name="login_title">Sign in to GeoPic.</string>
    <string name="sign_in_hint_alt">Sign In</string>
    <string name="sign_in_hint">Already have an account? <font color="#42A5F5">&#160;Sign In</font></string>
    <string name="sign_up_hint_alt">Don\'t have an account? <font color="#42A5F5">&#160;Sign Up</font></string>
    <string name="image_description">Profile picture</string>
    <string name="sign_up_hint">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="bio_hint">Bio</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="save_profile_hint">Save Profile</string>
    <string name="profile_label_string">Profile</string>
    <string name="contact_label_string">Contact</string>
    <string name="location_placeholder">Location Name</string>
    <string name="image_hint">Image</string>
    <string name="location_feed_hint">Images and videos happening in the area.</string>
    <string name="placeholder_description">Lorem ipsum dolor sit amet, consectetur adipiscing
        elit. Curabitur eu ipsum ipsum.
    </string>
    <string name="image_preview">preview of the captured image</string>

</resources>