<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_template"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        >

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/edit_label"
            android:textSize="16sp"

            android:backgroundTint="@color/blue_main"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/placeholder"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:text="@string/placeholder_id"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_description" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>

