<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/yourImageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/image_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_banner_foreground"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/yourImageView"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/baseline_person_24"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="2dp"
                    app:elevation="8dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/profile_image"
                    android:layout_alignParentEnd="true"
                    android:text="@string/edit_label" />

            </RelativeLayout>

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="6dp"
                android:text="@string/placeholder"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="10dp"
                android:text="@string/placeholder_id"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >


            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>