<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditProfile">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:elevation="2dp"
                android:foreground="@drawable/baseline_add_a_pfp_24"
                android:foregroundGravity="center"
                android:src="@drawable/default_profile_picture"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                app:elevation="8dp">


            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="48dp"
                >

                <ImageView
                    android:id="@+id/banner_image_edit"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/cardview_dark_background"
                    android:contentDescription="@string/image_description"
                    android:foreground="@drawable/baseline_add_a_banner_24"
                    android:foregroundGravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_banner_foreground"
                    app:layout_collapseMode="parallax" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/profile_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/profile_label_string"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/blue_main"
                        app:hintTextColor="@color/blue_main"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/profile_label">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username_hint"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bioLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/blue_main"
                        app:hintTextColor="@color/blue_main"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/usernameLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/bio_hint"
                            android:minLines="3"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/contact_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/contact_label_string"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/blue_main"
                        app:hintTextColor="@color/blue_main"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contact_label">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name_hint"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/blue_main"
                        app:hintTextColor="@color/blue_main"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name_hint"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        app:boxStrokeColor="@color/blue_main"
                        app:hintTextColor="@color/blue_main"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/phoneLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_hint"
                            android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save_profile_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@color/blue_main"
                        android:text="@string/save_profile_hint"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
                        app:layout_constraintVertical_bias="0.172" />


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>