<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_template"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:paddingVertical="16dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:elevation="1dp"
            android:src="@drawable/default_profile_picture"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"

            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/placeholder_id"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/black"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:scaleType="centerCrop" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_centerVertical="true"
            />

        <!-- Replay Button added here -->
        <ImageView
            android:id="@+id/replay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/baseline_replay_24"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        >

        <TextView
            android:id="@+id/video_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/location_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/video_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/video_location"
            android:paddingBottom="16dp"
            android:text="@string/placeholder_description"
            app:layout_constraintTop_toBottomOf="@id/video_location"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"

        />

</LinearLayout>

